data/rq1/k1/rust_code/final_projects/host__25c1898e1626/translate_by_qwen3_coder/preprocessed_header.h

typedef unsigned int size_t;
typedef int ssize_t;
typedef long long off_t;
typedef unsigned int UINT32;
typedef signed int INT32;
typedef INT32 ssize_t;
typedef UINT32 size_t;
void *malloc (size_t);
void free (void *);
typedef int errno_t;
extern errno_t memset_s(void *dest, size_t destMax, int c, size_t count);
extern errno_t memcpy_s(void *dest, size_t destMax, const void *src, size_t count);
typedef enum {
    LOG_TYPE_MIN = 0,
    LOG_INIT = 1,
    LOG_CORE = 3,
    LOG_TYPE_MAX
} LogType;
typedef enum {
    LOG_DEBUG = 3,
    LOG_INFO = 4,
    LOG_WARN = 5,
    LOG_ERROR = 6,
    LOG_FATAL = 7,
} LogLevel;
int HiLogPrint(LogType type, LogLevel level, unsigned int domain, const char* tag, const char* fmt, ...)
    __attribute__((format(os_log, 5, 6)));