data/paper_artifacts/deepseek_v4_pro_ohos10_0613_harness_fixed_v2/projects/appverify_lite__e5ebe91a98b9/.c2r_bindgen_extern/app_centraldirectory_06cf30c0.externs.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub type size_t = ::core::ffi::c_uint;
unsafe extern "C" {
    pub fn malloc(arg1: size_t) -> *mut ::core::ffi::c_void;
}
unsafe extern "C" {
    pub fn free(arg1: *mut ::core::ffi::c_void);
}
pub type ssize_t = ::core::ffi::c_int;
pub type off_t = ::core::ffi::c_longlong;
pub const LOG_TYPE_MIN: LogType = 0;
pub const LOG_INIT: LogType = 1;
pub const LOG_CORE: LogType = 3;
pub const LOG_TYPE_MAX: LogType = 4;
pub type LogType = ::core::ffi::c_uint;
pub const LOG_DEBUG: LogLevel = 3;
pub const LOG_INFO: LogLevel = 4;
pub const LOG_WARN: LogLevel = 5;
pub const LOG_ERROR: LogLevel = 6;
pub const LOG_FATAL: LogLevel = 7;
pub type LogLevel = ::core::ffi::c_uint;
unsafe extern "C" {
    pub fn HiLogPrint(
        type_: LogType,
        level: LogLevel,
        domain: ::core::ffi::c_uint,
        tag: *const ::core::ffi::c_char,
        fmt: *const ::core::ffi::c_char,
        ...
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn lseek(arg1: ::core::ffi::c_int, arg2: off_t, arg3: ::core::ffi::c_int) -> off_t;
}
unsafe extern "C" {
    pub fn read(arg1: ::core::ffi::c_int, arg2: *mut ::core::ffi::c_void, arg3: size_t) -> ssize_t;
}
pub type errno_t = ::core::ffi::c_int;
unsafe extern "C" {
    pub fn memset_s(
        dest: *mut ::core::ffi::c_void,
        destMax: size_t,
        c: ::core::ffi::c_int,
        count: size_t,
    ) -> errno_t;
}
unsafe extern "C" {
    pub fn memcpy_s(
        dest: *mut ::core::ffi::c_void,
        destMax: size_t,
        src: *const ::core::ffi::c_void,
        count: size_t,
    ) -> errno_t;
}
